N900 How to install maemo-leste.

--- a/phone.htm
+++ b/phone.htm
@@ -375,6 +375,13 @@ Mugen Power 3.7V 2400mA電池</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_postmarketos_unpack_uinitrd.htm">
     Unpack uInitrd-postmarketos-stable</a><br>
+
+&oplus;
+<b>MAEMO LESTE</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_leste_setup.htm">
+    安裝系統</a><br>
 <br><br><br><br>
 
 <div id="astro"></div>
