--- a/phone/n900_maemo_leste_setup.htm
+++ b/phone/n900_maemo_leste_setup.htm
@@ -24,7 +24,7 @@ Maemo
 <pre>
 $ sudo vim /etc/bootmenu.d/30-maemo-leste-Overclock.item
     ITEM_NAME="Maemo Leste Overclock"
-    ITEM_KERNEL="uImageX"
+    ITEM_KERNEL="uImage"
     ITEM_DEVICE="${EXT_CARD}p1"
     ITEM_FSTYPE="ext2"
 
