--- a/phone/n900_maemo_setup.htm
+++ b/phone/n900_maemo_setup.htm
@@ -5,38 +5,20 @@
 <h3><a href="../phone.htm">手機</a> - N900 - Maemo - <b>安裝系統</b></h3>
 <hr size="1"><br>
 <p>
-刷機步驟(WinXP)：<br>
-1. 確保手機電量70%以上<br>
-2. 拔下手機電池<br>
-3. 按下N900鍵盤<b>U鍵</b>不放<br>
-4. 插入手機電池<br>
-5. 連接N900 USB至PC端並等待驅動程式安裝完成<br>
-<img src="n900_maemo_setup/1.jpg" class="maxSize"><br><br>
-
-6. https://github.com/steward-fu/website/releases/download/n900/firmware.7z<br>
-7. 開啟maemo flasher</a>程式(CLI介面)：開始 =&gt; 程式集 =&gt; Maemo flasher 3.5 =&gt; Maemo flasher 3.5<br>
-8. 刷入Kernel(如果有安裝UBoot程式，建議先更新Kernel)
+步驟如下：<br>
+1. 關機<br>
+2. 按住<b>U鍵</b><br>
+3. 連接USB<br>
+4. 執行如下命令
 </p>
 <pre>
-C:\&gt; flasher-3.5.exe -k zImage -f -R
-</pre><br>
-
-<p>
-9. 刷入EMMC Image
-</p>
-<pre>
-C:\&gt; flasher-3.5.exe -F RX-51_2009SE_10.2010.13-2.VANILLA_PR_EMMC_MR0_ARM.bin -f -R
-</pre><br>
-
-<p>
-10. 刷入Combined Image
-</p>
-<pre>
-C:\&gt; flasher-3.5.exe -F RX-51_2009SE_21.2011.38-1_PR_COMBINED_MR0_ARM.bin -f -R
+$ cd 
+$ wget https://github.com/steward-fu/website/releases/download/n900/firmware.7z
+$ 7za x firmware.7z
+$ cd firmware
+$ ./flasher_debian -k zImage -f -R
+$ ./flasher_debian -F RX-51_2009SE_21.2011.38-1_PR_COMBINED_MR0_ARM.bin -f -R
+$ ./flasher_debian -F RX-51_2009SE_10.2010.13-2.VANILLA_PR_EMMC_MR0_ARM.bin -f -R
 </pre>
-
-<p>
-11. 放開鍵盤U鍵並重新開機
-</p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
