--- a/phone.htm
+++ b/phone.htm
@@ -70,6 +70,10 @@ USB、UART改造(1)</a><br>
 USB、UART改造(2)</a><br>
 
 &dash;
+<a href="phone/n900_uart_jack.htm">
+UART改造(耳機孔)</a><br>
+
+&dash;
 <a href="phone/n900_sixaxis.htm">
 連接PS SixAxis手把</a><br>
 
