--- a/phone/n900_uart_jack.htm
+++ b/phone/n900_uart_jack.htm
@@ -5,7 +5,7 @@
 <h3><a href="../phone.htm">手機</a> - N900 - <b>UART改造(耳機孔)</b></h3>
 <hr size="1"><br>
 <p>
-UART傳輸線<br>
+傳輸線<br>
 <img src="n900_uart_jack/1.jpg" class="maxSize"><br><br>
 
 UART腳位<br>
@@ -16,6 +16,9 @@ UART腳位<br>
 
 只需要使用膠帶隔離就可以<br>
 <img src="n900_uart_jack/4.jpg" class="maxSize"><br><br>
+
+UART腳位<br>
+<img src="n900_uart2/3.jpg" class="amxSize"><br><br>
 
 跳線<br>
 <img src="n900_uart_jack/5.jpg" class="maxSize"><br><br>
