--- a/phone.htm
+++ b/phone.htm
@@ -386,6 +386,10 @@ Mugen Power 3.7V 2400mA電池</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_maemo_leste_setup.htm">
     安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_leste_build_kernel_6_1_9.htm">
+    Build Kernel 6.1.9</a><br>
 <br><br><br><br>
 
 <div id="astro"></div>
