--- a/index.htm
+++ b/index.htm
@@ -675,12 +675,12 @@ GPIO</a><br>
 <a href="handheld/wiz_io.htm">
 I/O Port</a><br>
 
-&lowast;
-<a href="handheld/wiz/bootmode.htm">
+&dash;
+<a href="handheld/wiz_bootmode.htm">
 Boot Mode</a><br>
 
-&lowast;
-<a href="handheld/wiz/uart.htm">
+&dash;
+<a href="handheld/wiz_uart.htm">
 製作UART傳輸線</a><br>
 
 &lowast;
