--- a/handheld/wiz_uart.htm
+++ b/handheld/wiz_uart.htm
@@ -1,83 +1,40 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>GP2X Wiz</h3>
-<p><b>製作UART傳輸線</b></p>
-<hr size="1">
+<h3><a href="../index.htm">掌機</a> - GP2X Wiz - <b>製作UART傳輸線</b></h3>
+<hr size="1"><br>
 <p>
 勇敢的料雞出現了...<br>
-<img src="uart/1.jpg" class="maxSize"><br><br>
+<img src="wiz_uart/1.jpg" class="maxSize"><br><br>
 
 斬殺之後<br>
-<img src="uart/2.jpg" class="maxSize"><br><br>
+<img src="wiz_uart/2.jpg" class="maxSize"><br><br>
 
 跳線<br>
-<img src="uart/3.jpg" class="maxSize">
+<img src="wiz_uart/3.jpg" class="maxSize">
 </p><br>
 
 <table>
-<tr><th>Pin</th><th>Description</th></tr>
-<tr><td>8</td><td>開關</td></tr>
-<tr><td>9</td><td>開關</td></tr>
-<tr><td>12</td><td>GND</td></tr>
-<tr><td>13</td><td>RXD</td></tr>
-<tr><td>14</td><td>TXD</td></tr>
-<tr><td>22</td><td>VCC</td></tr>
+    <tr><th>Pin</th><th>Description</th></tr>
+    <tr><td>8</td><td>開關</td></tr>
+    <tr><td>9</td><td>開關</td></tr>
+    <tr><td>12</td><td>GND</td></tr>
+    <tr><td>13</td><td>RXD</td></tr>
+    <tr><td>14</td><td>TXD</td></tr>
+    <tr><td>22</td><td>VCC</td></tr>
 </table>
 <p>
-<img src="uart/4.jpg" class="maxSize"><br><br>
+<img src="wiz_uart/4.jpg" class="maxSize"><br><br>
 
 完成<br>
-<img src="uart/8.jpg" class="maxSize"><br>
-<img src="uart/7.jpg" class="maxSize"><br><br>
+<img src="wiz_uart/8.jpg" class="maxSize"><br>
+<img src="wiz_uart/7.jpg" class="maxSize"><br><br>
 
 連接WIZ<br>
-<img src="uart/5.jpg" class="maxSize"><br>
-<img src="uart/6.jpg" class="maxSize"><br><br>
-Firmware v1.2.6的開機訊息(Baudrate: 115200bps)
+<img src="wiz_uart/5.jpg" class="maxSize"><br>
+<img src="wiz_uart/6.jpg" class="maxSize"><br><br>
+Baudrate 115200bps
 </p>
 
 <pre>
@@ -178,12 +135,4 @@ Firmware v1.2.6的開機訊息(Baudrate: 115200bps)
 P.S. <b>CTRL+C</b>可以中斷gp2xmenu的執行，讓使用者可以使用Terminal操作
 </p>
 
-<p>
-<br><a href="../../handheld.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
