--- a/index.htm
+++ b/index.htm
@@ -680,11 +680,11 @@ I/O Port</a><br>
 Boot Mode</a><br>
 
 &dash;
-<a href="handheld/wiz_uart.htm">
-製作UART傳輸線</a><br>
+<a href="handheld/wiz_setup_sd.htm">
+安裝系統(SD)</a><br>
 
-&lowast;
-<a href="handheld/wiz/os_uart.htm">
+&dash;
+<a href="handheld/wiz_setup_uart.htm">
 安裝系統(UART)</a><br>
 
 &lowast;
@@ -695,9 +695,9 @@ Boot Mode</a><br>
 <a href="handheld/wiz/ipk.htm">
 安裝Qtopia IPK</a><br>
 
-&lowast;
-<a href="handheld/wiz/os_sd.htm">
-安裝系統(SDCard)</a><br>
+&dash;
+<a href="handheld/wiz_uart.htm">
+製作UART傳輸線</a><br>
 
 &lowast;
 <a href="handheld/wiz/led.htm">
