XT898 Added teardown images.

--- a/phone.htm
+++ b/phone.htm
@@ -29,6 +29,7 @@
     <a href="#curve9320">       <img src="img/photos/curve9320.jpg"     class="t0" title="Blackberry Curve9320"/></a>
     <a href="#xt894">           <img src="img/photos/xt894.jpg"         class="t0" title="Motorola XT894"/></a>
     <a href="#xt897">           <img src="img/photos/xt897.jpg"         class="t0" title="Motorola XT897"/></a>
+    <a href="#xt898">           <img src="img/photos/xt898.jpg"         class="t0" title="Motorola XT898"/></a>
     <a href="#pro1x">           <img src="img/photos/pro1x.jpg"         class="t0" title="F(x)tec Pro1 X"/></a>
     <a href="#pro1">            <img src="img/photos/pro1.jpg"          class="t0" title="F(x)tec Pro1"/></a>
     <a href="#titan">           <img src="img/photos/titan.jpg"         class="t0" title="Unihertz Titan"/></a>
@@ -1525,6 +1526,16 @@ Motorola XT897</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/xt897/debian_console_null.htm">
     為何Kernel沒有輸出任何Printk訊息</a><br>
+<br><br><br><br>
+
+<div id="xt898"></div>
+<h3><img src="img/photos/xt898.jpg" class="floatLeft"/>
+Motorola XT898</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="phone/xt898_teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="pro1x"></div>
