--- a/index.htm
+++ b/index.htm
@@ -687,12 +687,12 @@ Boot Mode</a><br>
 <a href="handheld/wiz_setup_uart.htm">
 安裝系統(UART)</a><br>
 
-&lowast;
-<a href="handheld/wiz/qtopia.htm">
+&dash;
+<a href="handheld/wiz_qtopia.htm">
 安裝Qtopia系統</a><br>
 
-&lowast;
-<a href="handheld/wiz/ipk.htm">
+&dash;
+<a href="handheld/wiz_ipk.htm">
 安裝Qtopia IPK</a><br>
 
 &dash;
