VxWorks How to prepare qemu environment.

--- a/system.htm
+++ b/system.htm
@@ -28,6 +28,7 @@
     <a href="#k3s">         <img src="img/photos/k3s.jpg"           class="t0" title="K3s"/></a>
     <a href="#sailfish">    <img src="img/photos/sailfish.jpg"      class="t0" title="Sailfish OS"/></a>
     <a href="#autosar">     <img src="img/photos/autosar.jpg"       class="t0" title="AUTOSAR"/></a>
+    <a href="#vxworks">     <img src="img/photos/vxworks.jpg"       class="t0" title="VxWorks"/></a>
 </p>
 </div>
 
@@ -571,6 +572,19 @@ AUTOSAR</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="system/autosar/scapy_udp.htm">
     如何使用SCAPY產生UDP PCAP</a><br>
+<br><br><br><br>
+
+<div id="vxworks"></div>
+<h3><img src="img/photos/vxworks.jpg" class="floatLeft"/>
+AUTOSAR</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>23.09</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="system/vxworks_23_09_setup_qemu.htm">
+    安裝系統(QEMU)</a><br>
 <br><br><br><br>
 </p>
 
