VxWorks How to build examples.

--- a/system/vxworks_23_09_setup_qemu.htm
+++ b/system/vxworks_23_09_setup_qemu.htm
@@ -15,7 +15,7 @@ https://d13321s3lxgewa.cloudfront.net/downloads/wrsdk-vxworks7-docs/2309/README_
 $ cd
 $ wget https://d13321s3lxgewa.cloudfront.net/wrsdk-vxworks7-qemu-1.13.2.tar.bz2
 $ tar xvf wrsdk-vxworks7-qemu-1.13.2.tar.bz2
-$ cd
+$ cd wrsdk-vxworks7-qemu
 $ qemu-system-x86_64 -m 512M -kernel vxsdk/bsps/itl_generic_3_0_0_3/vxWorks \
     -net nic -net user,hostfwd=tcp::1534-:1534,hostfwd=tcp::2345-:2345 \
     -display none -serial stdio -monitor none \
