--- a/system/vxworks_23_09_build_rtp.htm
+++ b/system/vxworks_23_09_build_rtp.htm
@@ -16,7 +16,7 @@ $ source wrsdk-vxworks7-qemu/sdkenv.sh
 $ cd ~/wrsdk-vxworks7-qemu/examples/rtp/hello_cmake_rtp
 $ mkdir build
 $ cd build
-$ cmake ..
+$ cmake -D CMAKE_TOOLCHAIN_FILE=~/wrsdk-vxworks7-qemu/vxsdk/sysroot/mk/rtp.toolchain.cmake .
 $ make
 </pre>
 
