--- a/system/vxworks_23_09_build_dkm.htm
+++ b/system/vxworks_23_09_build_dkm.htm
@@ -16,7 +16,7 @@ $ source wrsdk-vxworks7-qemu/sdkenv.sh
 $ cd ~/wrsdk-vxworks7-qemu/examples/dkm/hello_cmake_dkm
 $ mkdir build
 $ cd build
-$ cmake ..
+$ cmake -D CMAKE_TOOLCHAIN_FILE=~/wrsdk-vxworks7-qemu/vxsdk/sysroot/mk/dkm.toolchain.cmake ..
 $ make
 </pre>
 
