--- a/system/vxworks_23_09_build_rtp.htm
+++ b/system/vxworks_23_09_build_rtp.htm
@@ -9,7 +9,7 @@
 https://forums.windriver.com/t/vxworks-software-development-kit-sdk/43<br>
 https://d13321s3lxgewa.cloudfront.net/downloads/wrsdk-vxworks7-docs/2309/README_qemu.html<br><br>
 
-安裝步驟：
+步驟：
 </p>
 <pre>
 $ source wrsdk-vxworks7-qemu/sdkenv.sh
@@ -18,6 +18,14 @@ $ mkdir build
 $ cd build
 $ cmake -D CMAKE_TOOLCHAIN_FILE=~/wrsdk-vxworks7-qemu/vxsdk/sysroot/mk/rtp.toolchain.cmake .
 $ make
+</pre><br>
+
+<p>
+執行方式：
+</p>
+<pre>
+-&gt; cmd
+[vxWorks *]# hello_cmake
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
