VxWorks An kernel example (hello, world).

--- a/system.htm
+++ b/system.htm
@@ -593,6 +593,14 @@ AUTOSAR</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="system/vxworks_23_09_build_dkm.htm">
     Build Example(DKM)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>Kernel (DKM)</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="system/vxworks_23_09_dkm_hello.htm">
+        Hello, world!</a><br>
+
 <br><br><br><br>
 </p>
 
