--- a/system.htm
+++ b/system.htm
@@ -576,7 +576,7 @@ AUTOSAR</h3>
 
 <div id="vxworks"></div>
 <h3><img src="img/photos/vxworks.jpg" class="floatLeft"/>
-AUTOSAR</h3>
+VxWorks</h3>
 <hr size="1"><br><br><br><br><br>
 
 &oplus;
