N900 Fixed paper issue.

--- a/phone.htm
+++ b/phone.htm
@@ -210,16 +210,20 @@ Mugen Power 3.7V 2400mA電池</a><br>
     解決Ctrl+Backspace失效問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="phone/n900_maemo_fix_vim_backspace.htm">
-    解決Vim無法使用Backspace問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_maemo_fix_tracker.htm">
     解決High CPU Usage問題(tracker)</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_maemo_fix_logfile.htm">
     解決High CPU Usage問題(/usr/bin/Xorg -logfile)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_vim_backspace.htm">
+    解決Vim無法使用Backspace問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/n900_maemo_fix_less.htm">
+    解決paper: applet not found問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_maemo_fix_bounds_h.htm">
