--- a/system/vxworks_23_09_dkm_hello.htm
+++ b/system/vxworks_23_09_dkm_hello.htm
@@ -27,7 +27,7 @@ int myProbe(void)
     drvNum = iosDrvInstall(NULL, NULL, NULL, NULL, NULL, NULL, NULL);
     iosDevAdd(&amp;hdr, "/dev/hello", drvNum);
     printf("Hello, world!\n");
-    return 0;
+    return OK;
 }
 </pre><br>
 
