--- a/driver.htm
+++ b/driver.htm
@@ -19,11 +19,12 @@
 
 <div id="page"><br><br>
 <p>
-    <a href="#wdm">     <img src="img/photos/wdm.jpg"       class="t0" title="Windows Driver Model (WDM)"/></a>
-    <a href="#ldd">     <img src="img/photos/ldd.jpg"       class="t0" title="Linux Device Driver (LDD)"/></a>
-    <a href="#kmdf">    <img src="img/photos/kmdf.jpg"      class="t0" title="Kernel Mode Driver Framework (KMDF)"/></a>
-    <a href="#legacy">  <img src="img/photos/legacy.jpg"    class="t0" title="Windows NT Driver (Legacy)"/></a>
-    <a href="#mdd">     <img src="img/photos/mdd.jpg"       class="t0" title="MS-DOS Device Driver (MDD)"/></a>
+    <a href="#wdm">     <img src="img/photos/wdm.jpg"           class="t0" title="Windows Driver Model (WDM)"/></a>
+    <a href="#ldd">     <img src="img/photos/ldd.jpg"           class="t0" title="Linux Device Driver (LDD)"/></a>
+    <a href="#kmdf">    <img src="img/photos/kmdf.jpg"          class="t0" title="Kernel Mode Driver Framework (KMDF)"/></a>
+    <a href="#legacy">  <img src="img/photos/legacy.jpg"        class="t0" title="Windows NT Driver (Legacy)"/></a>
+    <a href="#mdd">     <img src="img/photos/mdd.jpg"           class="t0" title="MS-DOS Device Driver (MDD)"/></a>
+    <a href="#vxworks">     <img src="img/photos/vxworks.jpg"   class="t0" title="VxWorks"/></a>
 </p>
 </div>
 
@@ -1425,6 +1426,25 @@ Assembly<br>
                 <a href="driver/mdd/block/asm_hello.htm">
                 Hello, world!</a><br>
 <br><br><br><br>
+
+<div id="vxworks"></div>
+<h3><img src="img/photos/vxworks.jpg" class="floatLeft"/>
+VxWorks</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<b>23.09</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <b>C/C++</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="system/vxworks_23_09_setup_qemu.htm">
+        開發環境</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/vxworks_23_09_dkm_hello.htm">
+        Hello, world!</a><br>
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
