--- a/driver/vxworks_23_09_dkm_hello.htm
+++ b/driver/vxworks_23_09_dkm_hello.htm
@@ -2,12 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../system.htm">系統</a> - VxWorks - 23.09 - Kernel (DKM) - <b>Hello, world!</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - VxWorks - 23.09 - C/C++ - <b>Hello, world!</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
 https://zhuanlan.zhihu.com/p/597577575<br>
 https://forums.windriver.com/t/vxworks-software-development-kit-sdk/43<br>
+https://mail.prz-rzeszow.pl/~ssamolej/vxworks/vxworks_kernel_programmers_guide_6.6.pdf<br>
 https://d13321s3lxgewa.cloudfront.net/downloads/wrsdk-vxworks7-docs/2309/README_qemu.html<br>
 https://learning.windriver.com/path/vxworks7-essentials-workbench-and-tools/vxworks-kernel-shell<br><br>
 
