--- a/index.htm
+++ b/index.htm
@@ -699,45 +699,33 @@ Boot Mode</a><br>
 <a href="handheld/wiz_uart.htm">
 製作UART傳輸線</a><br>
 
-&lowast;
-<a href="handheld/wiz/led.htm">
+&dash;
+<a href="handheld/wiz_debug_led.htm">
 焊接GPIOC-16 LED</a><br>
 
-&lowast;
-<a href="handheld/wiz/upload.htm">
+&dash;
+<a href="handheld/wiz_upload_python.htm">
 Upload程式(Python)</a><br>
 
-&lowast;
-<a href="handheld/wiz/usb_uart.htm">
-如何讓USB介面變成UART裝置</a><br>
+&dash;
+<a href="handheld/wiz_build_warm.htm">
+Build wARM</a><br>
 
-&lowast;
-<a href="handheld/wiz/usb_network.htm">
-如何讓USB介面變成Network裝置</a><br>
+&dash;
+<a href="handheld/wiz_build_uboot.htm">
+Build U-Boot</a><br>
 
-&lowast;
-<a href="handheld/wiz/build_warm.htm">
-build warm</a><br>
+&dash;
+<a href="handheld/wiz_build_kernel.htm">
+Build Kernel</a><br>
 
-&lowast;
-<a href="handheld/wiz/build_uboot.htm">
-build uboot</a><br>
+&dash;
+<a href="handheld/wiz_build_pollux_dpc_set.htm">
+Build Pollux_dpc_set</a><br>
 
-&lowast;
-<a href="handheld/wiz/build_kernel.htm">
-build kernel</a><br>
-
-&lowast;
-<a href="handheld/wiz/build_fba-gp2x-b73.htm">
-build fba-gp2x-b73</a><br>
-
-&lowast;
-<a href="handheld/wiz/build_pollux_dpc_set.htm">
-build pollux_dpc_set</a><br>
-
-&lowast;
-<a href="handheld/wiz/fix_make.htm">
-解決"lkc_defs.h: No such file or directory"問題</a><br>
+&dash;
+<a href="handheld/wiz_fix_make.htm">
+解決lkc_defs.h: No such file or directory問題</a><br>
 
 &oplus;
 <b>Assembly</b><br>
