Miyoo mini Refined.

--- a/handheld/miyoo_mini_stock_dmesg.htm
+++ b/handheld/miyoo_mini_stock_dmesg.htm
@@ -1,55 +1,9 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>Miyoo Mini &gt;&gt; Stock</h3>
-<p><b>dmesg</b></p>
-<hr size="1">
-<p>
-如下：
-</p>
+<h3><a href="../index.htm">掌機</a> - Miyoo Mini - Stock - <b>dmesg</b></h3>
+<hr size="1"><br>
 <pre>
 Booting Linux on physical CPU 0x0
 Linux version 4.9.84 (alfchen@alfchen-NUC) (gcc version 8.2.1 20180802 (GNU Toolchain for the A-profile Architecture 8.2-2018-08 (arm-rel-8.23)) ) #573 SMP PREEMPT Sat Nov 20 16:56:19 CST 21
@@ -107,9 +61,9 @@ Preemptible hierarchical RCU implementation.
         RCU restricting CPUs from NR_CPUS=4 to nr_cpu_ids=2.
 RCU: Adjusting geometry for rcu_fanout_leaf=32, nr_cpu_ids=2
 NR_IRQS:16 nr_irqs:16 16
-ms_init_main_intc: np->name=ms_main_intc, parent=gic
-ms_init_pm_intc: np->name=ms_pm_intc, parent=ms_main_intc
-ss_init_gpi_intc: np->name=ms_gpi_intc, parent=ms_main_intc
+ms_init_main_intc: np-&gt;name=ms_main_intc, parent=gic
+ms_init_pm_intc: np-&gt;name=ms_pm_intc, parent=ms_main_intc
+ss_init_gpi_intc: np-&gt;name=ms_gpi_intc, parent=ms_main_intc
 Find CLK_cpupll_clk, hook ms_cpuclk_ops
 arm_arch_timer: Architected cp15 timer(s) running at 6.00MHz (virt).
 clocksource: arch_sys_counter: mask: 0xffffffffffffff max_cycles: 0x1623fa770, max_idle_ns: 440795202238 ns
@@ -143,8 +97,8 @@ cpuidle: using governor menu
 Version : MVX4##I2M#g#######KL_LX409##[BR:g]#XVM
 
 GPIO: probe end
-[ss_gpi_intc_domain_alloc] hw:42 -> v:43
-[MS_PM_INTC] hw:20 -> v:51
+[ss_gpi_intc_domain_alloc] hw:42 -&gt; v:43
+[MS_PM_INTC] hw:20 -&gt; v:51
 [Padmux]reset Pad_58(reg 0xe28; mask0x4000) to GPIO(org: PM_SD_CDZ_MODE)
 hw-breakpoint: found 5 (+1 reserved) breakpoint and 4 watchpoint registers.
 hw-breakpoint: maximum watchpoint size is 8 bytes.
@@ -214,11 +168,11 @@ ALSA device list:
 VFS: Mounted root (squashfs filesystem) readonly on device 31:4.
 devtmpfs: mounted
 This architecture does not have kernel memory protection.
->> [sdmmc] ms_sdmmc_probe
+&gt;&gt; [sdmmc] ms_sdmmc_probe
 cma: cma_alloc(cma c035d0d4, count 1, align 0)
 cma: cma_alloc(): returned c63c8840
 [Padmux]reset Pad_51(reg 0x101e08; mask0x300) to GPIO(org: SDIO_MODE_1)
->> [sdmmc_0] Probe Platform Devices
+&gt;&gt; [sdmmc_0] Probe Platform Devices
 ntfs: driver 2.1.32 [Flags: R/O MODULE].
 ehci_hcd: USB 2.0 'Enhanced' Host Controller (EHCI) Driver
 Mstar_ehc_init version:20180309
@@ -259,8 +213,8 @@ m
 e
 0
     miu=0,sz=1500000  reserved_start=26700000
-r_front->miuBlockIndex:0,r_front->start_cpu_bus_pa:0x20000000,r_front->start_cpu_bus_pa+r_front->length:0x26700000
-r_back->miuBlockIndex:1,r_back->start_cpu_bus_pa:0x27c00000,r_back->start_cpu_bus_pa+r_back->length:0x27f00000
+r_front-&gt;miuBlockIndex:0,r_front-&gt;start_cpu_bus_pa:0x20000000,r_front-&gt;start_cpu_bus_pa+r_front-&gt;length:0x26700000
+r_back-&gt;miuBlockIndex:1,r_back-&gt;start_cpu_bus_pa:0x27c00000,r_back-&gt;start_cpu_bus_pa+r_back-&gt;length:0x27f00000
 mi_sys_mma_allocator_create success, heap_base_addr=26700000 length=1500000
 Kernel CONFIG_HZ = 100
 Sigmastar Module version: project_commit.866b490 sdk_commit.341badc build_time.20200714212826
@@ -371,7 +325,7 @@ client [694] connected, module:disp
 [MI_SYSCFG_GetPanelInfo 50] eTiming = 30, hdmiTx = 1  Not Fund!!!
 [MI_SYSCFG_GetPanelInfo 50] eTiming = 32, hdmiTx = 1  Not Fund!!!
 
-sstar_fb_open fb:0 info->fix.smem_start = 0x6721000,user=1
+sstar_fb_open fb:0 info-&gt;fix.smem_start = 0x6721000,user=1
 
 
 screen_base:c9780000
@@ -386,29 +340,21 @@ sstar_FB_SetBlending 416 u8GOP=1,u8win=0 aType=0 u8constAlpha=255
 random: fast init done
 client [704] connected, module:sys
 
-sstar_fb_release fb:0 user=1,par->ref_count=2
+sstar_fb_release fb:0 user=1,par-&gt;ref_count=2
 
 client [704] connected, module:gfx
 GE_EnableDynaClkGate
  MI_Moduledev_RegisterDev
 
-sstar_fb_mmap vma->vm_start=b5a9a000
- vma->vm_end=b5e9a000
- vma->vm_pgoff =26721
+sstar_fb_mmap vma-&gt;vm_start=b5a9a000
+ vma-&gt;vm_end=b5e9a000
+ vma-&gt;vm_pgoff =26721
 
 [Padmux]reset Pad_59(reg 0xe1c; mask0x10) to GPIO(org: PM_IRIN_MODE)
 reg=0x1F003410 clk=12000000, period=0x3a97
 reg=0x1F003408 clk=12000000, u32Duty=0x0
 reg=0x1F003410 clk=12000000, period=0x3a97
 reg=0x1F003408 clk=12000000, u32Duty=0x3a97
-</pre><br>
+</pre>
 
-<p>
-<br><a href="../../handheld.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
