Miyoo mini Refined.

--- a/index.htm
+++ b/index.htm
@@ -929,29 +929,29 @@ SDL Key</a><br>
 
 &oplus;
 <b>Parasyte</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/miyoo-mini/parasyte_build_sdl2.htm">
-    build sdl2</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_mini_parasyte_build_sdl2.htm">
+    Build SDL2</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/miyoo-mini/parasyte_build_ppsspp.htm">
-    build ppsspp</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_mini_parasyte_build_ppsspp.htm">
+    Build PPSSPP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/miyoo-mini/parasyte_build_openbor.htm">
-    build openbor</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_mini_parasyte_build_openbor.htm">
+    Build OpenBOR</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/miyoo-mini/parasyte_build_buildroot.htm">
-    build buildroot</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_mini_parasyte_build_buildroot.htm">
+    Build Buildroot</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/miyoo-mini/parasyte_build_swiftshader.htm">
-    build swiftshader</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_mini_parasyte_build_sdl2.htm">
+    Build SwiftShader</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/miyoo-mini/parasyte_build_ffplay.htm">
-    build ffplay(SDL 1.2)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_mini_parasyte_build_ffplay.htm">
+    Build FFplay(SDL1.2)</a><br>
     
 &oplus;
 <b>C/C++</b><br>
