Miyoo mini Refined.

--- a/index.htm
+++ b/index.htm
@@ -956,17 +956,17 @@ SDL Key</a><br>
 &oplus;
 <b>C/C++</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/miyoo-mini/stock_screentest.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_mini_cpp_screentest.htm">
     閃屏測試</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/miyoo-mini/stock_framebuffer.htm">
-    framebuffer</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_mini_cpp_framebuffer.htm">
+    Framebuffer</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/miyoo-mini/stock_input_event.htm">
-    input_event</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/miyoo_mini_cpp_input_event.htm">
+    Input_Event</a><br>
 <br><br><br><br>
 
 <div id="miyoominiplus"></div>
