VxWorks Added an example for file operation.

--- a/driver.htm
+++ b/driver.htm
@@ -1445,6 +1445,10 @@ VxWorks</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_hello.htm">
         Hello, world!</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/vxworks_23_09_dkm_file.htm">
+        File Operation</a><br>
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
