--- a/driver.htm
+++ b/driver.htm
@@ -1449,6 +1449,10 @@ VxWorks</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_file.htm">
         File Operation</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/vxworks_23_09_dkm_ioctl.htm">
+        IOCTL Operation</a><br>
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
