Playdate Added spec. and teardown pages.

--- a/index.htm
+++ b/index.htm
@@ -28,6 +28,7 @@
     <a href="#miyoominiplus">   <img src="img/photos/miyoo-mini-plus.jpg"   class="t0" title="Miyoo Mini Plus"/></a>
     <a href="#miyoo">           <img src="img/photos/miyoo.jpg"             class="t0" title="Miyoo"/></a>
     <a href="#pocketgo">        <img src="img/photos/pocketgo.jpg"          class="t0" title="PocketGo"/></a>
+    <a href="#playdate">        <img src="img/photos/playdate.jpg"          class="t0" title="Playdate"/></a>
     <a href="#miyoomax">        <img src="img/photos/miyoomax.jpg"          class="t0" title="Miyoo Max"/></a>
     <a href="#pyra">            <img src="img/photos/pyra.jpg"              class="t0" title="Pyra"/></a>
     <a href="#gaviar">          <img src="img/photos/gaviar.jpg"            class="t0" title="Gaviar (小志掌機)"/></a>
@@ -1771,6 +1772,20 @@ build mininit</a><br>
 &lowast;
 <a href="handheld/pocketgo/build_lua.htm">
 build liblua 5.1.4</a><br>
+<br><br><br><br>
+
+<div id="playdate"></div>
+<h3><img src="img/photos/playdate.jpg" class="floatLeft"/>
+Playdate</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/playdate_spec.htm">
+介紹</a><br>
+
+&dash;
+<a href="handheld/playdate_teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="miyoomax"></div>
