--- a/index.htm
+++ b/index.htm
@@ -165,6 +165,7 @@
     <a href="#retroid-3p">      <img src="img/photos/retroid-3p.jpg"        class="t0" title="Retroid Pocket 3 Plus"/></a>
     <a href="#retrostone">      <img src="img/photos/retrostone.jpg"        class="t0" title="RetroStone"/></a>
     <a href="#q2">              <img src="img/photos/q2.jpg"                class="t0" title="Q2"/></a>
+    <a href="#gkd-pixel">       <img src="img/photos/gkd-pixel.jpg"         class="t0" title="GKD Pixel"/></a>
 </p>
 </div>
 
@@ -6965,6 +6966,17 @@ Q2</h3>
 <a href="handheld/q2/bootmode.htm">
 如何進入燒錄模式</a><br>
 <br><br><br><br>
+
+<div id="gkd-pixel"></div>
+<h3><img src="img/photos/gkd-pixel.jpg" class="floatLeft"/>
+GKD Pixel</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/gkd_pixel_screen.htm">
+可視角</a><br>
+<br><br><br><br>
+
 </p>
 
 <br><script type="text/javascript" src="tail.js"></script>
