GKD Pixel Added spec. page.

--- a/index.htm
+++ b/index.htm
@@ -6973,6 +6973,10 @@ GKD Pixel</h3>
 <hr size="1"><br><br><br><br><br>
 
 &dash;
+<a href="handheld/gkd_pixel_spec.htm">
+簡要規格</a><br>
+
+&dash;
 <a href="handheld/gkd_pixel_teardown.htm">
 拆機</a><br>
 
