GKD Pixel How to extract kernel from micro sd.

--- a/index.htm
+++ b/index.htm
@@ -6983,6 +6983,10 @@ GKD Pixel</h3>
 &dash;
 <a href="handheld/gkd_pixel_screen.htm">
 可視角</a><br>
+
+&dash;
+<a href="handheld/gkd_pixel_extract_kernel_from_microsd.htm">
+如何從MicroSD解出Kernel</a><br>
 <br><br><br><br>
 
 </p>
