GKD Pixel UART modding.

--- a/index.htm
+++ b/index.htm
@@ -6985,6 +6985,10 @@ GKD Pixel</h3>
 可視角</a><br>
 
 &dash;
+<a href="handheld/gkd_pixel_uart_jack.htm">
+焊接UART(耳機孔)</a><br>
+
+&dash;
 <a href="handheld/gkd_pixel_extract_kernel_from_microsd.htm">
 如何從MicroSD解出Kernel</a><br>
 <br><br><br><br>
